2006-11-16  Hendrik Tews  <tews@tandem.cs.ru.nl>

	* added Scope, ScopeKind serialization
	* new circularities: Scope.variables, Scope.typeTags; they
	required a bit of refactoring in the postpone_circularity code
	* new nullable Scope.parentScope, Scope.namespaceVar, 
	Scope.parameterizedEntity

2006-11-15  Hendrik Tews  <tews@tandem.cs.ru.nl>

	* added has_negative_values in EnumType
	* added in compound_info: compound_scope, is_transparent_union, syntax

	* redesigned postpone_circular_* functions: they work on the
	reference now and don't take the field anymore

2006-11-14  Hendrik Tews  <tews@tandem.cs.ru.nl>

	* added overload, virtuallyOverride, scope in Variable
	* new circularity Variable.overload

2006-11-10  Hendrik Tews  <tews@tandem.cs.ru.nl>

	* asttools adopted 
	* regressions pass

2006-11-08  Hendrik Tews  <tews@tandem.cs.ru.nl>

	* completed merge with changes from
	  smbase-484-ast-278-elkhound-1036-elsa-2439, a few issues are
	  delayed/ignored for a while, see TODO

2006-11-05  Hendrik Tews  <tews@localhost.localdomain>

	* elsa compiles + non-ocaml regression tests
	* new nullables:
		TranslationUnit.globalScope
		E_stringLit.fullTextNQ
	* regression tests pass!

2006-11-04  Hendrik Tews  <tews@localhost.localdomain>

	* smbase merged
	* ast merged
	* elkhound merged
	* started merge

	* vendor import from oink: smbase-484-ast-278-elkhound-1036-elsa-2439
	* removed files from the vendor import

2006-10-30  Hendrik Tews  <tews@tandem.cs.ru.nl>

	* released version 0.2: elsa-2005.08.22b-olmar-2006.10.30 snapshot

	* small release/snapshot fixes

	* updated documentation

2006-10-27  Hendrik Tews  <tews@tandem.cs.ru.nl>

	* fix ocaml -g 
	* add docclean target
	* prepare doc generation

2006-10-24  Hendrik Tews  <tews@tandem.cs.ru.nl>

	* Taras Glek's bug fixed: iostream header yields a IN_expr with a
	null expression (nullable IN_expr.e); seems to be a real elsa bug

2006-10-23  Hendrik Tews  <tews@tandem.cs.ru.nl>
