@@ -1,13 +1,16 @@
-config.status
-config.summary
-Makefile
 *.cmi
 *.cmo
 *.cmx
+Makefile
 ast_graph
 ast_graph.native
 check-oast
-dumpast
-hashloc
+check_oast
+check_oast_byte
+config.status
+config.summary
 count-ast
+dumpast
+elsa_ast_type_descr.ml
+hashloc
 temp.oast
