@@ -32,6 +32,7 @@ open Ast_annotation
 let variable_annotation(v : 'a variable) = v.poly_var
 let baseClass_annotation baseClass = baseClass.poly_base
 let compound_info_annotation info = info.compound_info_poly
+let scope_annotation scope = scope.poly_scope
 
 let atomicType_annotation = function
   | SimpleType(annot, _)
