@@ -18,6 +18,8 @@ ast_util.cmo: ../elsa/ml_ctype.cmo ../elsa/cc_ml_types.cmo \
     ../elsa/cc_ast_gen_type.cmo ../elsa/ast_annotation.cmi 
 ast_util.cmx: ../elsa/ml_ctype.cmx ../elsa/cc_ml_types.cmx \
     ../elsa/cc_ast_gen_type.cmx ../elsa/ast_annotation.cmx 
+check_oast.cmo: ../elsa/cc_ast_gen_type.cmo ../elsa/ast_annotation.cmi 
+check_oast.cmx: ../elsa/cc_ast_gen_type.cmx ../elsa/ast_annotation.cmx 
 count-ast.cmo: ../elsa/ml_ctype.cmo dense_set.cmi ../elsa/cc_ast_gen_type.cmo \
     ast_util.cmo ../elsa/ast_annotation.cmi 
 count-ast.cmx: ../elsa/ml_ctype.cmx dense_set.cmx ../elsa/cc_ast_gen_type.cmx \
