@@ -1,3 +1,8 @@
+2006-12-13  Hendrik Tews  <tews@tandem.cs.ru.nl>
+
+	* use the new dynamic type checking to check scopes: Everything
+	fine
+	
 2006-11-16  Hendrik Tews  <tews@tandem.cs.ru.nl>
 
 	* added Scope, ScopeKind serialization
